# oss-easysoft-odbc-oriver-for-oracle

./: AUTHORS  BUGS  ChangeLog  EPL.html  FAQ  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.0.4.0pre1  README.0.5.6  TODO  acconfig.h  aclocal.m4  allowed  bootstrap  config.h.in  configure  configure.in  configure_local  manifest  manifest.051  manifest.056  mkinstalldirs  oracle.sum
.deps/CVS/: Repository
CVS/: Entries  Repository  Root
OLD_READMES/: README.0.5.0
autom4te.cache/: output.0  traces.0
config/: Makefile.in  aclocal.m4  ltconfig
config/CVS/: Entries  Repository  Root
junk/: grep_for_funcs  makefile.save
junk/CVS/: Entries  Repository
src/: Makefile.am  Makefile.in  SQLAllocHandle.c  SQLBindCol.c  SQLBindParameter.c  SQLBrowseConnect.c  SQLBulkOperations.c  SQLCancel.c  SQLCloseCursor.c  SQLColAttribute.c  SQLColumnPrivileges.c  SQLColumns.c  SQLConnect.c  SQLCopyDesc.c  SQLDescribeCol.c  SQLDescribeParam.c  SQLDisconnect.c  SQLDriverConnect.c  SQLEndTran.c  SQLExecDirect.c  SQLExecute.c  SQLExtendedFetch.c  SQLFetch.c  SQLFetchScroll.c  SQLForeignKeys.c  SQLFreeHandle.c  SQLFreeStmt.c  SQLGetConnectAttr.c  SQLGetCursorName.c  SQLGetData.c  SQLGetDescField.c  SQLGetDescRec.c  SQLGetDiagField.c  SQLGetDiagRec.c  SQLGetEnvAttr.c  SQLGetFunctions.c  SQLGetInfo.c  SQLGetStmtAttr.c  SQLGetTypeInfo.c  SQLMoreResults.c  (+38 more)
src/.deps/CVS/: Repository
src/CVS/: Entries  Repository
test/: Makefile.am  Makefile.in  SQLColAttributesIn.h  SQLColumns1.c  SQLColumns2.c  SQLGetInfoIn.h  SQLPutTest.c  check_oracle_environment  cleanup.c  commit1.c  connect1.c  connect2.c  direct_exec1.c  direct_exec2.c  getinfo1.c  insert1.c  insert2.c  insert3.c  insert4.c  insert5.c  insert6.c  insert7.c  lowlevel.c  malloctest.c  read1.c  read2.c  read3.c  read4.c  read5.c  readchars.c  rollback1.c  runtests  test_defs.h  tested.so.far
test/.deps/CVS/: Repository
test/CVS/: Entries  Repository
